# HyperFT

./: .gitignore  README.md
Prj-Android/: local.properties
Prj-Android/app/src/main/cpp/: CMakeLists.txt  LandmarkTracking.h  tracking-lib.cpp
Prj-Android/app/src/main/java/com/hyq/hm/landmarksticker/: GLPoints.java  MainActivity.java
Prj-Android/app/src/main/java/com/sample/tracking/: FaceOverlapFragment.java  FaceTrackerActivity.java
Prj-Android/app/src/main/java/trackingsoft/tracking/: Face.java  FaceTracking.java
Prj-Android/gradle/wrapper/: gradle-wrapper.properties
